Fixed overflow bug in kpiSetBox, added owner to cKpis

--- a/frontend/src/components/Home/KpiSetListItem.module.css
+++ b/frontend/src/components/Home/KpiSetListItem.module.css
@@ -9,9 +9,7 @@
   border-radius: 10px;
   margin-top: 40px;
   display: flex;
-  /*
-  // can add a @media to make the layout change when screen is smaller
-  lex-wrap: wrap;*/
+  flex-wrap: wrap;
 }
 
 .kpiSetSelected {
@@ -28,17 +26,15 @@
   border-radius: 10px;
   margin-top: 40px;
   display: flex;
-  /*
-  // can add a @media to make the layout change when screen is smaller
-  lex-wrap: wrap;*/
+  flex-wrap: wrap;
 }
 
-.rKpiMeta {
+/*.rKpiMeta {
   position: relative;
-  /*margin-left: calc(15% - 30px);*/
+  //margin-left: calc(15% - 30px);
   width: 70%;
   display: flex;
-}
+}*/
 
 
 .kpiSection {
@@ -46,7 +42,7 @@
   vertical-align: top;*/
   padding-left: 2.5%;
   padding-right: 2.5%;
-  width: 35%;
+  width: 25%;
   min-width: 140px;
   min-height: 100px;
   margin-top: 10px;
@@ -57,11 +53,15 @@
 .kpiButtonSection {
   /*display: inline-block;
   vertical-align: top;*/
-  width: 20%;
+  width: 12%;
   min-width: 70px;
   min-height: 100px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.ownerSection {
+  width: 15%;
 }
 
 .kpiNameLabel {
